// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`chromium / 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER",
    ],
  },
]
`;

exports[`chromium /api/button/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(4) > .markdown-body.css-REMOVED_UNSTABLE_EMOTION_HASH > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-category=\\"demo\\"]",
      "div:nth-child(5) > .markdown-body.css-REMOVED_UNSTABLE_EMOTION_HASH > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-category=\\"demo\\"]",
    ],
  },
]
`;

exports[`chromium /api/select/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(4) > .markdown-body.css-REMOVED_UNSTABLE_EMOTION_HASH > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-category=\\"demo\\"]",
      "div:nth-child(5) > .markdown-body.css-REMOVED_UNSTABLE_EMOTION_HASH > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-category=\\"demo\\"]",
    ],
  },
]
`;

exports[`chromium /components/breadcrumbs 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      "#demo-REMOVED_UNSTABLE_USE_ID_VALUE_FROM_SNAPSHOT > div[role=\\"presentation\\"] > .MuiBreadcrumbs-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiTypography-root-MuiBreadcrumbs-root[aria-label=\\"breadcrumb\\"]",
    ],
  },
]
`;

exports[`chromium /components/button-group/ 1`] = `Array []`;

exports[`chromium /components/buttons/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/aria-progressbar-name?application=axeAPI",
    "id": "aria-progressbar-name",
    "nodes": Array [
      ".MuiLoadingButton-loadingIndicatorCenter.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiLoadingButton-loadingIndicator.MuiLoadingButton-loadingIndicator > .MuiCircularProgress-root.MuiCircularProgress-indeterminate.MuiCircularProgress-colorInherit",
      ".MuiLoadingButton-loadingIndicatorStart > .MuiCircularProgress-root.MuiCircularProgress-indeterminate.MuiCircularProgress-colorInherit",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(16) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(40) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(42) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/checkboxes/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER",
    ],
  },
]
`;

exports[`chromium /components/dialogs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER",
    ],
  },
]
`;

exports[`chromium /components/pagination/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/landmark-unique?application=axeAPI",
    "id": "landmark-unique",
    "nodes": Array [
      "#demo-REMOVED_UNSTABLE_USE_ID_VALUE_FROM_SNAPSHOT > .css-REMOVED_UNSTABLE_EMOTION_HASH-Stack-root > .MuiPagination-text.MuiPagination-root.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiPagination-root:nth-child(1)",
    ],
  },
]
`;

exports[`chromium /components/pickers 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(8) > .markdown-body.css-REMOVED_UNSTABLE_EMOTION_HASH > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(10) > .markdown-body.css-REMOVED_UNSTABLE_EMOTION_HASH > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/radio-buttons 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(24) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(28) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/rating/ 1`] = `Array []`;

exports[`chromium /components/selects/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(36) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(38) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(40) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/slider 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/aria-valid-attr-value?application=axeAPI",
    "id": "aria-valid-attr-value",
    "nodes": Array [
      "input[aria-label=\\"Small\\\\ steps\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(42) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(45) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/label?application=axeAPI",
    "id": "label",
    "nodes": Array [
      ".Mui-disabled.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiSlider-thumb.MuiSlider-thumbSizeMedium > input[aria-valuemax=\\"\\\\31 10\\"][aria-valuemin=\\"\\\\31 0\\"][min=\\"\\\\31 0\\"]",
      "input[value=\\"\\\\31 0\\"][aria-orientation=\\"horizontal\\"][aria-valuemax=\\"\\\\31 00\\"]",
    ],
  },
]
`;

exports[`chromium /components/switches/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(20) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(26) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(36) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/tabs/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(24) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(40) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(42) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/text-fields/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(40) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(44) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(46) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(48) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(56) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(57) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(59) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(61) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/label?application=axeAPI",
    "id": "label",
    "nodes": Array [
      "#filled-hidden-label-small",
      "#filled-hidden-label-normal",
      ".MuiInputBase-colorSecondary > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiInputBase-input-MuiOutlinedInput-input.MuiOutlinedInput-input[value=\\"\\"]",
      ".MuiInputBase-colorSuccess > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiInputBase-input-MuiFilledInput-input.MuiFilledInput-input[value=\\"\\"]",
      ".MuiInputBase-colorWarning > .css-REMOVED_UNSTABLE_EMOTION_HASH-MuiInputBase-input-MuiInput-input.MuiInput-input[value=\\"\\"]",
    ],
  },
]
`;

exports[`chromium /components/tooltips/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      "div:nth-child(14) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(26) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
      "div:nth-child(36) > .css-REMOVED_UNSTABLE_EMOTION_HASH.markdown-body > .jssREMOVED_UNSTABLE_JSS_COUNTER.css-REMOVED_UNSTABLE_EMOTION_HASH-MuiButtonBase-root-MuiIconButton-root[data-ga-event-action=\\"copy\\"]",
    ],
  },
]
`;

exports[`chromium /components/transfer-list 1`] = `Array []`;

exports[`chromium /components/tree-view/ 1`] = `
Array [
  Object {
    "canMismatch__helpUrl": "https://dequeuniversity.com/rules/axe/4.3/button-name?application=axeAPI",
    "id": "button-name",
    "nodes": Array [
      ".jssREMOVED_UNSTABLE_JSS_COUNTER",
    ],
  },
]
`;
